[project]
name = "data_challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_challenge"]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "scripts/**/*.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D", "UP", "PD", "I", "N", "ANN"]
ignore = [
    "D100", "D104"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"experiments/**/*.py" = ["D"]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.pyright]
typeCheckingMode = "standard"
